Repo table controls alignment fixed.

--- a/app/assets/stylesheets/_main.css.scss
+++ b/app/assets/stylesheets/_main.css.scss
@@ -57,7 +57,7 @@ header {
 }
 
 .right {
-  text-align: right;
+  text-align: right !important;
 }
 
 .b-dots {
